# Wildcat-Auxiliary

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  common-services.yml  deny.toml  docker-compose.yml  justfile  recipe.json
.github/: dependabot.yml
.github/workflows/: build.yml  nightly.yml  rust.yml  test.yml
crates/bcr-wdc-ebill-service/: Cargo.toml
crates/bcr-wdc-ebill-service/src/: convert.rs  error.rs  job.rs  lib.rs  main.rs  web.rs
crates/bcr-wdc-eic-service/: Cargo.toml
crates/bcr-wdc-eic-service/src/: email_confirmation.rs  ens.rs  error.rs  lib.rs  main.rs  service.rs  web.rs
crates/bcr-wdc-eic-service/src/email/: mod.rs  template.rs
crates/bcr-wdc-eic-service/src/persistence/: surreal.rs
crates/bcr-wdc-ens-service/: Cargo.toml
crates/bcr-wdc-ens-service/src/: email_preferences.rs  error.rs  lib.rs  main.rs  service.rs  template.rs  web.rs
crates/bcr-wdc-ens-service/src/email/: mod.rs  template.rs
crates/bcr-wdc-ens-service/src/persistence/: surreal.rs
crates/bcr-wdc-relay/: Cargo.toml
crates/bcr-wdc-relay/src/: auth.rs  main.rs  relay.rs
crates/bcr-wdc-relay/src/blossom/: mod.rs
crates/bcr-wdc-shared/: Cargo.toml
crates/bcr-wdc-shared/src/: lib.rs  rate_limit.rs  signature.rs  wire.rs
crates/bcr-wdc-shared/src/challenge/: mod.rs  persistence.rs
crates/bcr-wdc-shared/src/email/: mailjet.rs
docker/base-image/: Dockerfile
docker/ebill-service/: Dockerfile  config.toml
docker/eic-service/: Dockerfile  Dockerfile.buildkit  config.toml
docker/ens-service/: Dockerfile  Dockerfile.buildkit  config.toml
docker/relay/: Dockerfile
docker/rproxy/: nginx.conf
scripts/: cargo_git_auth.sh
