[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "3"
members = [
  "crates/bcr-wdc-eic-service",
  "crates/bcr-wdc-shared",
  "crates/bcr-wdc-ens-service",
  "crates/bcr-wdc-ebill-service",
]

[workspace.dependencies]
anyhow = {version = "1"}
async-trait = {version = "0.1"}
axum = {version = "0.8"}
axum-test = {version = "17"}
bcr-common = {git = "https://github.com/BitcreditProtocol/bcr-common.git", tag = "v0.5.0"}
bcr-ebill-api = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.4.12"}
bcr-ebill-core = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.4.12"}
bcr-ebill-transport = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.4.12"}
bcr-wdc-shared = {path = "./crates/bcr-wdc-shared"}
bip39 = {version = "2"}
bitcoin = {version = "0.32"}
borsh = {version = "1.5"}
borsh-derive = {version = "1.5"}
chrono = {version = "0.4"}
config = {version = "0.15"}
email_address = {version="0.2"}
futures = {version = "0.3"}
mockall = {version = "0.13"}
rand = {version = "0.9"}
reqwest = {version = "0.12", default-features = false}
secp256k1 = {version = "0.29"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
serde_repr = {version= "0.1"}
surrealdb = {version = "2.2"}
thiserror = {version = "2"}
tinytemplate = {version="1.2"}
tokio = {version = "1"}
tracing = {version = "0.1"}
tracing-log = {version = "0.2"}
tracing-subscriber = {version = "0.3"}
url = {version = "2.5"}
