[package]
name = "bcr-wdc-ebill-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = ["axum-test", "mockall"]

[dependencies]
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-common = {workspace = true}
bcr-ebill-api.workspace = true
bcr-ebill-core = {workspace = true}
bcr-ebill-transport.workspace = true
bcr-ebill-persistence.workspace = true
bip39 = {workspace = true, features = ["serde"]}
bitcoin = {workspace = true, features = ["serde"]}
borsh.workspace = true
config.workspace = true
chrono = {workspace = true}
futures.workspace = true
mockall = {workspace = true, optional = true}
reqwest = {workspace = true, features = ["stream"]}
rustls = "0.23"
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal", "time"]}
tracing = {workspace = true, features = ["log"]}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true, features = ["serde"]}
url = {workspace = true, features = ["serde"]}
uuid = {workspace = true}
