[package]
name = "bcr-wdc-ens-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
config.workspace = true
serde.workspace = true
serde_json = {workspace = true}
tokio = {workspace = true, features = ["signal", "rt-multi-thread"]}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
