[package]
name = "bcr-wdc-ens-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-extra = {version = "0.10", features = ["form"]}
bcr-common = {workspace = true}
bcr-wdc-shared = {workspace = true}
bitcoin = {workspace = true}
bitflags = "2.9"
borsh = {workspace = true}
borsh-derive = {workspace = true}
chrono = {workspace = true}
config.workspace = true
email_address = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
serde.workspace = true
serde_json = {workspace = true}
surrealdb = {workspace = true}
thiserror = {workspace = true}
tinytemplate = {workspace = true}
tokio = {workspace = true, features = ["signal", "rt-multi-thread"]}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = {workspace = true}
url = {workspace = true}
