[package]
name = "bcr-wdc-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws", "tokio"] }
axum-raw-websocket = "0.8"
chrono.workspace = true
clap = { version = "4.5.39", features = ["derive", "env"] }
deadpool-postgres = "0.14"
nostr = "0.44"
nostr-relay-builder = "0.44"
nostr-postgres-db = { git = "https://github.com/BitcreditProtocol/nostr-postgres-db.git", rev = "a8dbc8e" }
serde.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
