[package]
name = "bcr-wdc-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait= {workspace = true}
bcr-common = {workspace = true}
bitcoin = {workspace = true}
borsh = {workspace = true}
borsh-derive = {workspace = true}
chrono = {workspace = true}
email_address = {workspace = true}
rand = {workspace = true}
reqwest = {workspace = true, features = ["default","json"]}
secp256k1 = {workspace = true, features = ["global-context"]}
serde = {workspace = true}
serde_json = {workspace = true}
surrealdb = {workspace = true}
tracing = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
